samples/_failures_safe/1761217923_19d966_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1082a05c.c: In function ‘main’:
./samples/SAFE/__tmp_1082a05c.c:160:16: error: missing terminating " character
  160 |         printf("Graph is not connected
      |                ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1082a05c.c:160:9: error: expected expression at end of input
  160 |         printf("Graph is not connected
      |         ^~~~~~
./samples/SAFE/__tmp_1082a05c.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1082a05c.c:160:9: error: expected declaration or statement at end of input
